--- a/TicketManager/TicketManager.csproj
+++ b/TicketManager/TicketManager.csproj
@@ -107,13 +107,9 @@
     <None Include="Resources\Logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HashString\HashString.csproj">
-      <Project>{5711ada4-8503-4741-b410-fa23f0643a6d}</Project>
-      <Name>HashString</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HttpPoster\HttpPoster.csproj">
-      <Project>{47624608-8c92-41a4-8bb4-882796e242ee}</Project>
-      <Name>HttpPoster</Name>
+    <ProjectReference Include="..\Tickets4You\Tickets4You.csproj">
+      <Project>{f967a114-a7fd-4cfa-b87f-ad7862652f33}</Project>
+      <Name>Tickets4You</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
