--- a/Tickets4You/Tickets4You.csproj
+++ b/Tickets4You/Tickets4You.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Classes.cs" />
     <Compile Include="JSONParser.cs" />
+    <Compile Include="ListEvents.cs" />
     <Compile Include="Tickets4You.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
