--- a/TicketManager/TicketManager.csproj
+++ b/TicketManager/TicketManager.csproj
@@ -54,11 +54,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Windows\DownloadAndPrintPdf.xaml.cs">
+      <DependentUpon>DownloadAndPrintPdf.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Http.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="Windows\Settings.xaml.cs">
+      <DependentUpon>Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StaticItems.cs" />
-    <Compile Include="userLogin.xaml.cs">
+    <Compile Include="Windows\userLogin.xaml.cs">
       <DependentUpon>userLogin.xaml</DependentUpon>
     </Compile>
+    <Page Include="Windows\DownloadAndPrintPdf.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -71,7 +82,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="userLogin.xaml">
+    <Page Include="Windows\Settings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\userLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
