--- a/Tickets4You/Tickets4You.csproj
+++ b/Tickets4You/Tickets4You.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Extensions" />
@@ -42,8 +45,7 @@
   <ItemGroup>
     <Compile Include="Classes.cs" />
     <Compile Include="JSONParser.cs" />
-    <Compile Include="ListEvents.cs" />
-    <Compile Include="Ticket.cs" />
+    <Compile Include="StaticItems.cs" />
     <Compile Include="Tickets4You.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -56,6 +58,9 @@
       <Project>{47624608-8c92-41a4-8bb4-882796e242ee}</Project>
       <Name>HttpPoster</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
