--- a/TicketManager/TicketManager.csproj
+++ b/TicketManager/TicketManager.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UpdateManager.cs" />
     <Compile Include="Windows\DownloadAndPrintPdf.xaml.cs">
       <DependentUpon>DownloadAndPrintPdf.xaml</DependentUpon>
     </Compile>
@@ -120,6 +121,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HashString\HashString.csproj">
+      <Project>{5711ada4-8503-4741-b410-fa23f0643a6d}</Project>
+      <Name>HashString</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HttpPoster\HttpPoster.csproj">
+      <Project>{47624608-8c92-41a4-8bb4-882796e242ee}</Project>
+      <Name>HttpPoster</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Tickets4You\Tickets4You.csproj">
       <Project>{f967a114-a7fd-4cfa-b87f-ad7862652f33}</Project>
       <Name>Tickets4You</Name>
